sj-infra/influxdb/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: sj-infra
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: influxdb.192.168.50.200.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb-service
            port:
              number: 8086
